--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+      "experimentalDecorators": true,
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
     /* Basic Options */
@@ -46,9 +47,11 @@
      "moduleResolution": "node",                    /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
      "baseUrl": "./",                             /* Base directory to resolve non-absolute module names. */
      "paths": {
-       "api/*": ["src/api/*"],
-       "configs/*": ["src/configs/*"],
+       "app/*": ["src/app/*"],
+       "api/*": ["src/app/api/*"],
        "shared/*": ["src/shared/*"],
+       "configs/*": ["src/configs/*"],
+       "database/*": ["src/database/*"]
      },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                             /* List of folders to include type definitions from. */
