--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.7",
+    "mongoose-autopopulate": "^0.14.0",
     "multer": "^1.4.2",
     "nanoid": "^3.1.22",
     "reflect-metadata": "^0.1.13"
@@ -31,6 +32,7 @@
     "@types/http-errors": "^1.8.1",
     "@types/lodash": "^4.14.172",
     "@types/mongoose": "^5.10.5",
+    "@types/mongoose-autopopulate": "^0.10.2",
     "@types/multer": "^1.4.7",
     "nodemon": "^2.0.7",
     "prettier": "2.3.0",
