--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Sergeev Sergey",
   "license": "ISC",
   "dependencies": {
+    "@meanie/mongoose-to-json": "^2.5.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-transformer-validator": "^0.9.1",
@@ -21,7 +22,6 @@
     "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.7",
-    "mongoose-autopopulate": "^0.14.0",
     "multer": "^1.4.2",
     "nanoid": "^3.1.22",
     "reflect-metadata": "^0.1.13"
