--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.7",
     "multer": "^1.4.2",
