--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/http-errors": "^1.8.1",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/lodash": "^4.14.172",
     "@types/mongoose": "^5.10.5",
     "@types/mongoose-autopopulate": "^0.10.2",
