--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-transformer": "^0.4.0",
     "class-transformer-validator": "^0.9.1",
     "class-validator": "^0.13.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/http-errors": "^1.8.1",
