refactoring; added requests;

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "music app api",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon -r dotenv/config -r tsconfig-paths/register src/index.ts dotenv_config_path=./.env.development",
+    "dev": "nodemon -r dotenv/config -r tsconfig-paths/register --files src/index.ts dotenv_config_path=./.env.development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sergeev Sergey",
