--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "mongoose-autopopulate": "^0.16.0",
     "multer": "^1.4.2",
     "nanoid": "^3.1.22",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -55,6 +56,7 @@
           "api",
           "shared",
           "configs",
+          "lib",
           "database"
         ]
       }
