--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,6 +51,7 @@
        "api/*": ["src/app/api/*"],
        "shared/*": ["src/shared/*"],
        "configs/*": ["src/configs/*"],
+       "lib/*": ["src/lib/*"],
        "database/*": ["src/database/*"]
      },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
