--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "music app api",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon -r dotenv/config -r tsconfig-paths/register --files src/index.ts dotenv_config_path=./.env.development",
+    "dev": "nodemon -r tsconfig-paths/register --files src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sergeev Sergey",
@@ -15,9 +15,9 @@
     "class-transformer": "^0.4.0",
     "class-transformer-validator": "^0.9.1",
     "class-validator": "^0.13.1",
+    "config": "^3.3.6",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "http-status-codes": "^2.1.4",
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/config": "0.0.39",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
@@ -49,7 +50,7 @@
     "typescript": "^4.2.4"
   },
   "importSort": {
-    ".ts": {
+    ".js, .ts, .tsx": {
       "options": {
         "extraAliases": [
           "database",
@@ -57,7 +58,6 @@
           "api",
           "modules",
           "shared",
-          "configs",
           "lib"
         ]
       }
