--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.2",
     "nanoid": "^3.1.22",
     "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.6.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
