--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.0.7",
     "mongoose-autopopulate": "^0.16.0",
+    "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.2",
     "nanoid": "^3.1.22",
     "reflect-metadata": "^0.1.13",
