--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon -r tsconfig-paths/register --files src/index.ts",
-    "test": "jest"
+    "test": "jest --verbose"
   },
   "author": "Sergeev Sergey",
   "license": "ISC",
@@ -33,6 +33,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@jest-mock/express": "^1.4.5",
     "@types/bcrypt": "^5.0.0",
     "@types/config": "0.0.39",
     "@types/cookie-parser": "^1.4.2",
