--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/faker": "^5.5.9",
     "@types/http-errors": "^1.8.1",
     "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.5",
@@ -46,6 +47,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/mongoose-autopopulate": "^0.10.2",
     "@types/multer": "^1.4.7",
+    "faker": "^5.5.3",
     "jest": "^27.3.1",
     "nodemon": "^2.0.7",
     "prettier": "2.3.0",
