--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
           "api",
           "modules",
           "shared",
-          "lib"
+          "lib",
+          "fakeData"
         ]
       }
     }
