added tests for session repository;

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
           "modules",
           "shared",
           "lib",
-          "fakeData"
+          "__tests__"
         ]
       }
     }
