--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/multer": "^1.4.7",
     "faker": "^5.5.3",
     "jest": "^27.3.1",
+    "jest-extended": "^1.1.0",
     "nodemon": "^2.0.7",
     "prettier": "2.3.0",
     "prettier-plugin-sorted": "^2.0.0",
