--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@meanie/mongoose-to-json": "^2.5.0",
+    "@sindresorhus/to-milliseconds": "^2.0.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-transformer-validator": "^0.9.1",
@@ -50,7 +51,6 @@
     "@types/multer": "^1.4.7",
     "faker": "^5.5.3",
     "jest": "^27.3.1",
-    "jest-extended": "^1.1.0",
     "nodemon": "^2.0.7",
     "prettier": "2.3.0",
     "prettier-plugin-sorted": "^2.0.0",
