--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "music app api",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon -r tsconfig-paths/register --files src/index.ts",
+    "dev": "nodemon -r tsconfig-paths/register src/index.ts",
     "test": "jest --verbose"
   },
   "author": "Sergeev Sergey",
