--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,23 +3,28 @@
     "target": "es5",
     "module": "commonjs",
     "lib": ["es2015"],
-     "sourceMap": true,
-     "outDir": "dist",
+    "sourceMap": true,
+    "outDir": "dist",
     "strict": true,
-     "moduleResolution": "node",
-     "baseUrl": "./",
-     "paths": {
-       "app/*": ["src/app/*"],
-       "api/*": ["src/app/api/*"],
-       "modules/*": ["src/app/modules/*"],
-       "lib/*": ["src/lib/*"],
-       "database/*": ["src/database/*"],
-       "__tests__/*": ["__tests__/*"]
-     },
+    "moduleResolution": "node",
     "esModuleInterop": true,
-     "experimentalDecorators": true,
-     "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  }
+    "forceConsistentCasingInFileNames": true,
+    "typeRoots": [
+      "./src/lib/@types",
+      "./node_modules/@types"
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "app/*": ["src/app/*"],
+      "api/*": ["src/app/api/*"],
+      "modules/*": ["src/app/modules/*"],
+      "lib/*": ["src/lib/*"],
+      "database/*": ["src/database/*"],
+      "__tests__/*": ["__tests__/*"]
+    }
+  },
+  "exclude": ["node_modules"]
 }
