fixed passing ts-node option;

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,8 @@
       "__tests__/*": ["__tests__/*"]
     }
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  }
 }
