--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "music app api",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register src/index.ts",
     "test": "jest --verbose"
   },
   "author": "Sergeev Sergey",
   "license": "ISC",
   "dependencies": {
     "@meanie/mongoose-to-json": "^2.5.0",
-    "@sindresorhus/to-milliseconds": "^2.0.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-transformer-validator": "^0.9.1",
@@ -51,11 +50,10 @@
     "@types/multer": "^1.4.7",
     "faker": "^5.5.3",
     "jest": "^27.3.1",
-    "nodemon": "^2.0.7",
     "prettier": "2.3.0",
     "prettier-plugin-sorted": "^2.0.0",
     "ts-jest": "^27.0.7",
-    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.4.4"
   },
