--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,5 @@
       "__tests__/*": ["__tests__/*"]
     }
   },
-  "exclude": ["node_modules"],
-  "ts-node": {
-    "require": ["tsconfig-paths/register"]
-  }
+  "exclude": ["node_modules"]
 }
